test/Conversion/ImportAIGER/error.aag
// RUN: circt-translate --import-aiger %s --split-input-file --verify-diagnostics

// Test invalid format identifier
// expected-error @below {{expected 'aag' or 'aig' format identifier}}
xyz 1 1 0 1 0

// -----
// Test invalid header with missing numbers
// expected-error @below {{expected number}}
// expected-error @below {{failed to parse L (number of latches)}}
aag 3 2 a

// -----
// Test literal bound checking
aag 2 1 0 1 1
2
4
// expected-error @below {{AND gate literal exceeds maximum variable index}}
6 4 2

// -----
// Test invalid latch literal (odd number)
aag 2 0 1 1 0
// expected-error @below {{invalid latch current state literal}}
3 2
3

// -----
// Test output referencing non-existent variable
aag 1 1 0 1 0
2
// expected-error @below {{undefined literal in output}}
4

// -----
// Test invalid symbol table entry
aag 1 1 0 1 0
2
2
// expected-error @below {{failed to parse symbol position}}
i0x invalid_symbol
